--- a/cm2-assessment01-group08.rmd
+++ b/cm2-assessment01-group08.rmd
@@ -205,11 +205,26 @@ format_p_vals <- function(p) {
 # Usage (in-line): `r format_interval(el2_ci_normal_95[1], el2_ci_normal_95[2])`
 # Usage (console): format_interval(el2_ci_normal_95[1], el2_ci_normal_95[2])
 #####################################
-format_interval <- function(lower, upper, digits=3) {
-  paste0("[",
-       formatC(lower, format = "f", digits = digits), ", ",
-       formatC(upper, format = "f", digits = digits),
-       "]")
+format_interval <- function(lower, upper, digits = 3, small_interval = 5L) {
+  paste0(
+    "[",
+    formatC(
+      lower,
+      format = "f",
+      digits = digits,
+      small.interval = small_interval,
+      small.mark = " "
+    ),
+    ", ",
+    formatC(
+      upper,
+      format = "f",
+      digits = digits,
+      small.interval = small_interval,
+      small.mark = " "
+    ),
+    "]"
+  )
 }
 #####################################
 # function: format truncated ellipses
@@ -416,26 +431,13 @@ if (knitr::is_html_output()) {
 
 TBI
 
-- Testing
-
-$$
-1 + 1 =2
-$$
-
-<!-- prettier-ignore -->
-::: {.answer-wrapper}
-::: {.answer}
-Answer: 10.3282 or `r round(100 * 0.32801, 3)`%
-:::
-:::
-
 ```{=latex}
 \newpage
 ```
 
 # Asset risk theory {#qthree}
 
-```{r Q3-working}
+```{r Q3-working, echo=FALSE}
 r1_mu <- 0.06
 r1_sd <- sqrt(0.0244)
 
@@ -458,18 +460,6 @@ q3a_ve_step2 <- r2_p2 * (r2_mu2 - r2_mu_bar)^2
 q3a_ve_total <- q3a_ve_step1 + q3a_ve_step2
 
 r2_var <- q3a_ev_total + q3a_ve_total
-```
-
-```{r Q3b, echo=knitr::is_html_output(), results = 'hide'}
-# R code goes here
-set.seed(1234)
-n_sim <- 1e6
-
-Z <- rbinom(n_sim, size = 1, prob = 0.2)
-R2 <- rnorm(n_sim, mean = ifelse(Z==1, 0.3, 0.0), sd = 0.1)
-
-mean(R2)
-var(R2)
 ```
 
 Consider 2 assets with random returns. Asset 1 has a Normally distributed return
@@ -534,29 +524,166 @@ Answers: $\mathbb{E}[R_{2}] =$ `r fmt_trunc_ellip(r2_mu_bar)`, $\text{Var}(R_{2}
 ::: 
 :::
 
-## Use **R** to estimate $\mathbb{E}[R_{2}]$ and $\mathrm{Var}(R_{2})$. {#qthreePtB}
+## Use **R** to estimate $\mathbb{E}[R_{2}]$ and $\mathrm{Var}(R_{2})$. _[5 marks]_ {#qthreePtB}
 
-_[5 marks]_
+```{r Q3b, echo=TRUE, results = 'hide', fig.cap="Code"}
+# Set seed for reproducibility
+set.seed(1234)
+# Set the number of simulations
+n_sim <- 1e6
 
-We simulated `r formatC(n_sim, format = "fg", digits = 3, big.mark = ",")`
-values of $R_{2}$. This resulted in a mean value of
-**`r formatC(mean(R2), format = "fg", digits = 5, small.mark = " ", small.interval = 3L)`**
-and variance of
-**`r formatC(var(R2), format = "fg", digits = 5, small.mark = " ", small.interval = 3L)`**.
+# Z can be considered to be ~Binomial(n=n_sim, P=weights for each part)
+# R is then simulated as normal with mean that depends upon value of Z
+Z <- rbinom(n_sim, size = 1, prob = 0.2)
+R2 <- rnorm(n_sim, mean = ifelse(Z==1, 0.3, 0.0), sd = 0.1)
 
-- BE note: include brief detail here about the R commands used `rbinom` and
-  `rnorm`.
+# Calculate mean and variance
+R_2_mean <- mean(R2)
+R_2_var <- var(R2)
+```
 
-As expected, these are very similar to the theoretical values of 0.06 and 0.0244
+Monte Carlo simulation was used to estimate $\mathbb{E}[R_{2}]$ and $\mathrm{Var}(R_{2})$ using **R**. An indicator $Z \sim \text{Bernoulli}(0.2)$ was used to choose the mixture component, and values for $R_{2}\mid Z$ were generated from a normal distribution with standard deviation $0.1$ and mean $0$ (if $Z=0$) or $0.3$ (if $Z=1$).
+
+The sample mean and variance of the simulated values provide estimates for $\mathbb{E}[R_{2}]$ and $\mathrm{Var}(R_{2})$ ($\widehat{\mathbb{E}[R_{2}]}$ and $\widehat{\mathrm{Var}(R_{2})}$ respectively).
+
+Using `r formatC(n_sim, format="fg", digits=3, big.mark=",")` simulations, one obtains
+$\widehat{\mathbb{E}[R_{2}]}=$ `r fmt_trunc_ellip(R_2_mean)`
+and
+$\widehat{\mathrm{Var}(R_{2})}=$ `r fmt_trunc_ellip(R_2_var)`, or
+`r formatC(R_2_mean, format="fg", digits=5, small.mark=" ", small.interval=3L)`
+and
+`r formatC(R_2_var, format="fg", digits=5, small.mark=" ", small.interval=3L)` to 5 significant figures.
+
+These are very similar/in agreement, as expected, to the theoretical values of
+`r fmt_trunc_ellip(r2_mu_bar)` and `r fmt_trunc_ellip(r2_var)`
 calculated in \@ref(qthreePtA).
+
+<!-- `r fmt_trunc_ellip(mean(R2))` -->
+
+_Notes on the R functions: `rbinom(n, size=1, prob=p)` generates $n$ Bernoulli($p$) draws (0/1 indicators), and `rnorm(n, mean, sd)` generates $n$ normal draws; here mean is a vector so the mean changes with $Z$._
+
+- =BE note: Do we want a table of results here?, i.e., something like this:=
+
+| Quantity              | Simulation                    | Theoretical                    |
+| :-------------------- | :---------------------------- | :----------------------------- |
+| $\mathbb{E}[R_{2}]$   | `r fmt_trunc_ellip(R_2_mean)` | `r fmt_trunc_ellip(r2_mu_bar)` |
+| $\mathrm{Var}(R_{2})$ | `r fmt_trunc_ellip(R_2_var)`  | `r fmt_trunc_ellip(r2_var)`    |
+
+```{r Q3b-convergence-table-ci, echo=FALSE, message=FALSE, warning=FALSE}
+set.seed(1234)
+p <- 0.2
+mu0 <- 0.0
+mu1 <- 0.3
+sd <- 0.1
+
+# simulation sizes: 10^2 ... 10^7
+checkpoints <- 10^(2:7)
+
+# streaming mean/variance (Welford)
+# https://en.wikipedia.org/wiki/Algorithms_for_calculating_variance
+chunk_size <- 1e6
+n <- 0
+mean_run <- 0
+M2 <- 0
+
+update_running <- function(x, n, mean_run, M2) {
+  m <- length(x)
+  xbar <- mean(x)
+  xM2 <- sum((x - xbar)^2)
+  n_new <- n + m
+  delta <- xbar - mean_run
+  mean_new <- mean_run + delta * m / n_new
+  M2_new <- M2 + xM2 + delta^2 * n * m / n_new
+  list(n = n_new, mean = mean_new, M2 = M2_new)
+}
+
+out <- vector("list", length(checkpoints))
+
+for (i in seq_along(checkpoints)) {
+  target <- checkpoints[i]
+  remaining <- target - n
+
+  while (remaining > 0) {
+    m <- min(chunk_size, remaining)
+    Z <- rbinom(m, size = 1, prob = p)
+    x <- rnorm(m, mean = ifelse(Z == 1, mu1, mu0), sd = sd)
+
+    upd <- update_running(x, n, mean_run, M2)
+    n <- upd$n
+    mean_run <- upd$mean
+    M2 <- upd$M2
+
+    remaining <- target - n
+  }
+
+  var_run <- M2 / (n - 1)
+  out[[i]] <- data.frame(n_sim = n, mean = mean_run, var = var_run)
+}
+
+z <- qnorm(0.975)
+ci_digits <- 5
+
+sim_df <- bind_rows(out) %>%
+  mutate(
+    n_label = paste0("$10^{", as.integer(log10(n_sim)), "}$"),
+
+    # 95% CI for mean (CLT)
+    se_mean = sqrt(var / n_sim),
+    mean_lo = mean - z * se_mean,
+    mean_hi = mean + z * se_mean,
+
+    # 95% CI for variance (chi-square; exact if normal, approx for mixture)
+    df = n_sim - 1,
+    var_lo = df * var / qchisq(0.975, df),
+    var_hi = df * var / qchisq(0.025, df),
+
+    mean_5sf = formatC(
+      mean,
+      format = "fg",
+      digits = 4,
+      flag = "#"
+      # small.interval = 3L,
+      # small.mark = " "
+    ),
+    var_5sf = formatC(
+      var,
+      format = "fg",
+      digits = 4,
+      flag = "#"
+      # small.interval = 3L,
+      # small.mark = " "
+    ),
+    mean_ci = format_interval(mean_lo, mean_hi, digits = ci_digits),
+    var_ci = format_interval(var_lo, var_hi, digits = ci_digits)
+  ) %>%
+  select(
+    `Simulations` = n_label,
+    `Mean` = mean_5sf,
+    `95 percent CI (mean)` = mean_ci,
+    `Variance` = var_5sf,
+    `95 percent CI (var)` = var_ci
+  )
+
+sim_df %>%
+  kable(
+    booktabs = TRUE,
+    escape = FALSE,
+    align = "lcccc",
+    linesep = c("", "", "\\addlinespace"),
+    caption = "Monte Carlo convergence for $\\mathbb{E}[R_2]$ and $\\mathrm{Var}(R_2)$ with 95 percent intervals."
+  ) %>%
+  kable_styling(
+    full_width = FALSE,
+    position = "center",
+    latex_options = "hold_position"
+  )
+```
 
 <!-- # ================================================================== -->
 <!-- # Q3(C)  Calculate the shortfall probabilities for asset 1
 <!-- # ================================================================== -->
 
-## Calculate the shortfall probabilities for asset 1, assuming a benchmark return of
-
-_[2 marks]_
+## Calculate the shortfall probabilities for asset 1, assuming a benchmark return of _[2 marks]_ {#qthreePtC}
 
 $$
 \begin{array}{ll}
@@ -641,7 +768,7 @@ Answer: `r sprintf("%.3f", results_r1["T2"]*100)`% (3dp)
 <!-- # Q3(d)  Calculate the shortfall probabilities for asset 2
 <!-- # ================================================================== -->
 
-## Repeat part Q3c above for asset 2.
+## Repeat part Q3c above for asset 2. {#qthreePtD}
 
 _[4 marks]_
 
@@ -655,7 +782,7 @@ X\mid Z =1 &\sim \mathcal{N}(\mu=0.0, \, \sigma^{2}=0.1^{2}) \quad \text{w.p. } 
 X\mid Z =2 &\sim \mathcal{N}(\mu=0.3, \, \sigma^{2}=0.1^{2}) \quad \text{w.p. } 0.2
 \end{cases} \\[8pt]
 \text{Shortfall probability}
-& \mathbb{P}(R_2 < L)
+& \mathbb{P}[R_2 < L]
 = 0.8 \int_{-\infty}^{L} f_{\mathcal{N}(0,\,0.1^2)}(x)\, \mathrm{d}x
 + 0.2 \int_{-\infty}^{L} f_{\mathcal{N}(0.3,\,0.1^2)}(x)\, \mathrm{d}x \\[6pt]
 \hline
@@ -716,9 +843,7 @@ Answer: `r sprintf("%.3f", results_r2["T2"]*100)`% (3dp)
 <!-- # Q3(e)  Plot pdfs of returns for assets 1 and 2 on the same axes
 <!-- # ================================================================== -->
 
-## Use **R** to plot the probability density functions of returns for assets 1 and 2 on the same axes.
-
-_[3 marks]_
+## Use **R** to plot the probability density functions of returns for assets 1 and 2 on the same axes. _[3 marks]_ {#qthreePtE}
 
 The plotting range $[-0.5, 0.6]$ was selected based on definite outlier. For
 Asset1, $R_1 \sim \mathcal{N}(0.06, 0.0244)$ with standard deviation
@@ -859,13 +984,15 @@ p2_pdf <- ggplot(plot_df, aes(x = x, y = diff)) +
 (p1_pdf / p2_pdf) + plot_layout(heights = c(1.2, 1))
 ```
 
+```{=latex}
+\newpage
+```
+
 <!-- # ================================================================== -->
 <!-- # Q3(f) plot the cdfs of returns for assets 1 and 2 on the same axes.
 <!-- # ================================================================== -->
 
-## Use **R** to plot the cumulative density functions of returns for assets 1 and 2 on the same axes.
-
-_[2 marks]_
+## Use **R** to plot the cumulative density functions of returns for assets 1 and 2 on the same axes. _[2 marks]_ {#qthreePtF}
 
 ```{r Q3-part-f-v1, echo=FALSE}
 
@@ -988,7 +1115,7 @@ p2_cdf <- ggplot(cdf_df, aes(x = x, y = diff)) +
 <!-- # Q3(g)  comment on the risk involved in asset 2, compared to asset 1
 <!-- # ================================================================== -->
 
-## Comment on the risk involved in asset 2, compared to asset 1. _[4 marks]_
+## Comment on the risk involved in asset 2, compared to asset 1. _[4 marks]_ {#qthreePtG}
 
 Based on your answers to parts Q3a–Q3f above, comment on the risk involved in
 asset 2, compared to asset 1. _[4 marks]_
